Fix expense sublist date and spacing

--- a/client/src/components/Expenses/ExpenseSublist.module.css
+++ b/client/src/components/Expenses/ExpenseSublist.module.css
@@ -1,5 +1,5 @@
 .sublist {
-  margin: 10px 20px 20px 20px;
+  margin: 20px 20px 20px 20px;
   padding: 10px;
   background-color: bisque;
   border-radius: 15px;
